--- a/index-contact.html
+++ b/index-contact.html
@@ -55,6 +55,7 @@
 			<p></p> 
 			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
+			Discord: <strong>forganlu#6642</strong>
 			WeChat: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span>
 		
 	</p>
