--- a/painting/Sketch.html
+++ b/painting/Sketch.html
@@ -60,20 +60,28 @@
 		<div class="container">
 			<p>
 				<strong>Sketch Practices</strong> | Sketch<br/>
+				Mar. 2022<br />
 				Mar. 2019
+			</p><br/><br/>
+			<p>
+				I love black and white sketcing, for me it helps a lot to distinguish the line between black and white, and area of gray are so subtle, unclear, and ambiguous.<br/><br/>
+				Then I practice it, and try to understand it.
 			</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-1.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-2.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-3.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-4.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-5.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-6.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-7.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-8.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-9.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-athena-1.png" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-athena-2.png" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-athena-3.png" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-1.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-2.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-3.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-4.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-5.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-6.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-7.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-8.JPG" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-9.JPG" alt=""><p>&nbsp;</p>
 		</div>
 			
 		<p>&nbsp;</p> 
