--- a/painting/Sketch.html
+++ b/painting/Sketch.html
@@ -70,9 +70,24 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-athena-1.png" alt="" width="660px"><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-athena-2.png" alt="" width="660px"><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-athena-3.png" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-athena-1.png" alt="" width="660px"><br/>
+			<p style="text-align:right">
+			<strong>Athena</strong><br />
+				sketch<br />
+				41cm x 59.4cm | 16.5in x 23.4in<br />
+				</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-athena-2.png" alt="" width="660px"><br/>
+			<p style="text-align:right">
+				<strong>Athena</strong><br />
+					sketch<br />
+					41cm x 59.4cm | 16.5in x 23.4in<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-athena-3.png" alt="" width="660px"><br/>
+			<p style="text-align:right">
+				<strong>Athena</strong><br />
+					sketch<br />
+					41cm x 59.4cm | 16.5in x 23.4in<br />
+					</p><p>&nbsp;</p>
 			<img src="../image/painting/sketch/sketch-1.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/painting/sketch/sketch-2.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/painting/sketch/sketch-3.jpg" alt=""><p>&nbsp;</p>
