--- a/index-about.html
+++ b/index-about.html
@@ -59,27 +59,28 @@
 			Hong Kong based<br />
 			<br />
 			Guangzhou Academic of Fine Art - Oil Painting<br />
-			SCM Hong Kong - ZHdK Switzerland transcultural collaboration exchange programme - Athens, Greece<br />
+			SCM Hong Kong - ZHdK Switzerland transcultural collaboration exchange programme - Athens,GR<br />
 			<br />
 			<br />
 			<br />
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
+			<!--2022  <strong></strong> - SCM MFA graduation exhibition - Run Run Shaw Creative Center (HK.SAR,CN)<br/>-->
 			<br />
-			2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS/Greece<br />
-			2021  <strong>Saganaki on Ice</strong> - 2021 Transculture Collabration - Communitism/Greece<br />
-			2021  <strong>Furment</strong> - Creative Media Year1 MFA show<br />
+			2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS (Athens,GR)<br />
+			2021  <strong>Saganaki on Ice</strong> - 2021 Transculture Collabration - Communitism (Athens,GR)<br />
+			2021  <strong>Furment</strong> - SCM MFA group show - Run Run Shaw Creative Center (HK.SAR,CN)<br />
 			<br />
-			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum<br />
-			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA<br />
+			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum (Foshan,CN)<br />
+			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA (Guangzhou,CN)<br />
 			2020  <strong>The choice of the graduation star in 2020</strong> - OCAT Shenzhen OCT Harbour Exhibition Site – Boxes Art Space<br />
-			2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery<br />
+			2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery (Auckland,NZ)<br />
 			2020  <strong>GAFA Graduation Exhibition</strong> - GAFA online Art museum<br />
 			<br />
-			2019  <strong>Visual Games</strong> - Foshan Guicheng Art Museum<br />
+			2019  <strong>Visual Games</strong> - Foshan Guicheng Art Museum (Foshan,CN)<br />
 			<br />
-			2018  <strong>東方·來信 Inter-Youth</strong> - China Academic of Fine Art Museum<br />
-			2018  <strong>Ritz’s Dream</strong> (solo) - The Fifth Studio Exhibition Hall of GAFA<br />
-			2017  <strong>the Fifth Studio</strong> - the Art Museum of Guangzhou Academy of Fine Arts<br />
+			2018  <strong>東方·來信 Inter-Youth</strong> - China Academic of Fine Art Museum (Hangzhou,CN)<br />
+			2018  <strong>Ritz’s Dream</strong> (solo) - The Fifth Studio Exhibition Hall of GAFA (Guangzhou,CN)<br />
+			2017  <strong>the Fifth Studio</strong> - the Art Museum of Guangzhou Academy of Fine Arts (Guangzhou,CN)<br />
 			
 		</span>
 		</p>
