--- a/painting/Sketch.html
+++ b/painting/Sketch.html
@@ -65,7 +65,7 @@
 			</p><br/><br/>
 			<p>
 				I love black and white sketcing, for me it helps a lot to distinguish the line between black and white, and area of gray are so subtle, unclear, and ambiguous.<br/><br/>
-				Then I practice it, and try to understand it.
+				So I practice it, and try to understand it.
 			</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
@@ -74,32 +74,80 @@
 			<p style="text-align:right">
 			<strong>Athena</strong><br />
 				sketch<br />
+				Mar. 2022<br/>
 				41cm x 59.4cm | 16.5in x 23.4in<br />
 				</p><p>&nbsp;</p>
 			<img src="../image/painting/sketch/sketch-athena-2.png" alt="" width="660px"><br/>
 			<p style="text-align:right">
 				<strong>Athena</strong><br />
 					sketch<br />
+					Mar. 2022<br/>
 					41cm x 59.4cm | 16.5in x 23.4in<br />
 					</p><p>&nbsp;</p>
 			<img src="../image/painting/sketch/sketch-athena-3.png" alt="" width="660px"><br/>
 			<p style="text-align:right">
 				<strong>Athena</strong><br />
 					sketch<br />
+					Mar. 2022<br/>
 					41cm x 59.4cm | 16.5in x 23.4in<br />
 					</p><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-1.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-2.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-3.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-4.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-5.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-6.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-7.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-8.JPG" alt=""><p>&nbsp;</p>
-			<img src="../image/painting/sketch/sketch-9.JPG" alt=""><p>&nbsp;</p>
-		</div>
+			<img src="../image/painting/sketch/sketch-1.jpg" alt=""><br/>
 			
+			<p style="text-align:right">
+			<strong>Trees and Pills</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-2.jpg" alt=""><br/>
+			<p style="text-align:right">
+			<strong>My notebook</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-3.jpg" alt=""><br/>
+			<p style="text-align:right">
+			<strong>Cup and room keys</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-4.jpg" alt=""><br/>
+			<p style="text-align:right">
+			<strong>A rapper on the sofa</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-5.jpg" alt=""><br/>
+			<p style="text-align:right">
+			<strong>Skin illness</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-6.jpg" alt=""><br/>
+			<p style="text-align:right">
+			<strong>My favourite fruit</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p><p>&nbsp;</p>
+			<img src="../image/painting/sketch/sketch-7.jpg" alt=""><br/>
+			<p style="text-align:right">
+			<strong>be good</strong><br />
+					sketch<br />
+					Mar. 2019<br/>
+					27cm x 39cm<br />
+					</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p> 
+		<p>&nbsp;</p>
 		<p>&nbsp;</p> 
+			
+		</div>
+		
 
 	</div>
 	</div>
