--- a/index-mediabased.html
+++ b/index-mediabased.html
@@ -58,8 +58,13 @@
 		<div class="writingfront">
 			<span style="background-color:rgb(60, 255, 0)" >
 			Incompletely released.<br />
-			不完全发布。</span>
-	</div>
+			不完全发布。</span><br/><br/>
+		</div>
+		<div class="container">
+			<br/><br/>
+			<img src="../forganlu.github.io/image/mediabased/self.JPG" alt="" width="400px"><br/>
+			29th Mar. 2022 / credit to Jiang Dingyuan.
+		</div>
 	</div>
 	
 		
